# file2text

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ci-cd.yml  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/file2text/: __init__.py  file2text.py
tests/: test.docx  test_file2text.py  test_word.py
